Fixed toggle overlap on medium/small bp

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/CTHP/CTHPPage.scss
@@ -113,15 +113,20 @@
 		color: $header-font-color;
 	}
 	@include bp(large-up) {
+		min-height: 39px;
+		padding-right: 12px;
 		width: 58%;
 	}
 	@include bp(xtra-large) {
-		margin-bottom: 24px;
 		width: 65%;
 	}
 }
 .cthp-content .cardBody {
 	padding: 0.625em 0.8em;
+	flex: 1 0 auto;
+    display: flex;
+	flex-direction: column;
+	margin-bottom: 0;
 
 	@include bp(small) {
 		padding: 0;
@@ -160,6 +165,8 @@
 
 	.equalheight {
 		height: 100%;
+		display: flex;
+        flex-direction: column;
 	}
 
 	.cthpCard {
@@ -193,6 +200,9 @@
 .cthp-overview .cardBody {
 	p {
 		margin-top: 2px;
+		a:before {
+			content: none;
+		}
 	}
 }
 .cthpCard .rawHtml .cardBody {
@@ -202,6 +212,12 @@
 	a.arrow-link {
 		margin-top: 8px;
 	}
+	a:last-child {
+		margin-bottom: 20px;
+	}
+}
+.cthp-overview .ui-accordion-content .cardBody p:last-child {
+    margin-bottom: 20px;
 }
 .cthp-research .cardBody {
 	p {
@@ -244,10 +260,8 @@
 .cthp-version-toggle {
 	position: relative;
 	float: left;
-	background-color: #dbf2f8;
 	color: #fff;
 	margin: 0 50% 20px 0;
-	/* margin-top: -10px; -->  half the icon height */
 
 	a {
 		display: block;
@@ -273,14 +287,21 @@
 		html[lang="es"] &::before {
 			content: 'Vaya a la ';
 		}
+		/**** Sprite is now drawn in _arrowLinks.scss ****/
+		/**** TODO: get svg-sprite() to work outside of StyleSheets/ folder path ****/
 		&:hover, &:focus {
 			text-decoration: none;
 		}
 	}
 }
 @media only screen and (max-width: 709px) {
-	.cthp-version-toggle {
+	.cthp-hp-content .cthp-version-toggle {
+		background-color: #dde7f5;
+	}
+	.cthp-patient-content .cthp-version-toggle {
 		background-color: #f7f8f3;
+	}
+	.cthp-version-toggle {
 		display: inline-block;
 		float: none;
 		margin-right: 0;
@@ -312,8 +333,10 @@
 	}
 }
 @include bp(small) {
-	.cthp-version-toggle {
-		background-color: white;
+	.cthp-hp-content, .cthp-patient-content {
+		.cthp-version-toggle {
+			background-color: white;
+		}
 	}
 }
 @include bp(large-up) {
@@ -354,6 +377,15 @@
 		margin-bottom: 0;
 	}
 }
+
+// a) This anonymous div wrapping the rawHTML block in certain cards is a big red flag
+//  so we need to hack around it.
+// b) There is a legit bug in ie11 around nested flexboxes and autoscaling of images.
+// This hack references https://github.com/philipwalton/flexbugs/issues/75
+.cthpCard > .equalheight > .clearfix > div, .cthpCard > .equalheight > div {
+	min-height: 1px;
+}
+
 .cthpCard h3  {
 	color: #fff;
 	padding: 0.47em 0.6em;
@@ -431,9 +463,19 @@ h3.cthp-overview-title {
 /* .cthpCard + div:hover li a.arrow-link { */
 .cthpCard + div li a.arrow-link:hover {
 	color: #bb0e3d;
-
 }
-.cthpCard > div > h3 + div:hover {
+.cthpCard li a span {
+	&.filetype {
+		margin-right: 4px;
+	}
+	&.filesize {
+		@include bp(medium-down)
+		{
+			color: $default-text;
+		}
+	}
+}
+.cthpCard > .cthp-survival > h3 + div:hover {
 	background-color: black;
 
 	@include bp(small) {
